[gd_scene load_steps=18 format=3 uid="uid://cfn0lrjsqraoa"]

[ext_resource type="Script" path="res://obstacles/cannon_ball.gd" id="1_acvv7"]
[ext_resource type="Texture2D" uid="uid://8mf43i0i4y2w" path="res://assets/Rocky Roads/Enemies/bullet.png" id="2_lkhq4"]
[ext_resource type="Texture2D" uid="uid://bfj1xpwospf52" path="res://assets/Rocky Roads/FX/bomb_explosion.png" id="3_g3mo3"]
[ext_resource type="Texture2D" uid="uid://ck7ftdrqugmwe" path="res://assets/Rocky Roads/FX/bullet_windtrail.png" id="4_8n338"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ptuis"]
atlas = ExtResource("2_lkhq4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q37vr"]
atlas = ExtResource("3_g3mo3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6n5h"]
atlas = ExtResource("3_g3mo3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymmv7"]
atlas = ExtResource("3_g3mo3")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_me60e"]
atlas = ExtResource("3_g3mo3")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubjv7"]
atlas = ExtResource("3_g3mo3")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_fsa82"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptuis")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 0.72,
"texture": SubResource("AtlasTexture_q37vr")
}, {
"duration": 0.72,
"texture": SubResource("AtlasTexture_g6n5h")
}, {
"duration": 0.72,
"texture": SubResource("AtlasTexture_ymmv7")
}, {
"duration": 0.72,
"texture": SubResource("AtlasTexture_me60e")
}, {
"duration": 0.72,
"texture": SubResource("AtlasTexture_ubjv7")
}],
"loop": false,
"name": &"hit",
"speed": 24.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ch6v0"]
atlas = ExtResource("4_8n338")
region = Rect2(0, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dk0cq"]
atlas = ExtResource("4_8n338")
region = Rect2(20, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ew4sv"]
atlas = ExtResource("4_8n338")
region = Rect2(40, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dy6is"]
atlas = ExtResource("4_8n338")
region = Rect2(60, 0, 20, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_1rdac"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ch6v0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dk0cq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ew4sv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dy6is")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xywin"]
radius = 5.0
height = 16.0

[node name="CannonBall" type="Node2D"]
script = ExtResource("1_acvv7")

[node name="BulletSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, -3)
sprite_frames = SubResource("SpriteFrames_fsa82")
animation = &"hit"
autoplay = "default"
frame = 4
frame_progress = 1.0

[node name="TrailSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(17, -1)
sprite_frames = SubResource("SpriteFrames_1rdac")
autoplay = "default"
frame_progress = 0.689897
flip_h = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(6, 0)
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-6, 0)
rotation = 1.57079
shape = SubResource("CapsuleShape2D_xywin")

[node name="FlightTimer" type="Timer" parent="."]
autostart = true

[connection signal="animation_finished" from="BulletSprite" to="." method="_on_bullet_sprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="FlightTimer" to="." method="_on_flight_timer_timeout"]
